review and updated basic debian features

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,6 @@
 ---
-network_interfaces:
-     -  name: "eth0"
-        type: "dhcp"
-
-network_dummies: []
-network_dummies_number: "{{network_dummies|length}}"
-
-
+network_interfaces:          []
+network_dummies:             []
 network_interfaces_disabled: []
+
+                                                                            
