update support for debian 12 add support for bridges

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,5 +2,6 @@
 network_interfaces:          []
 network_dummies:             []
 network_interfaces_disabled: []
+network_bridges: []
 
                                                                             
