--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -41,6 +41,6 @@
   when: network_dummies_number != 0
   tags: [configuration,network]
 
-- include: Debian.yml
+- include_tasks: Debian.yml
   when: ansible_os_family == 'Debian'
 
