--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -99,3 +99,12 @@
   with_items: "{{ ifconfig_result_up_br.results }}"
   tags: [configuration,network]
   ignore_errors: True
+
+- name: Aggiunge entries a /etc/hosts
+  become: yes
+  lineinfile:
+    path: /etc/hosts
+    regexp: "^{{ item.ip }}\\s+{{ item.name }}$"
+    line: "{{ item.ip }} {{ item.name }}"
+    state: present
+  loop: "{{ network_hosts_entries }}"
