--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,6 +14,7 @@
     msg: "{{ network_dummies_number }}"
 
 - name: Install network packages
+  when: network_install_packages
   ansible.builtin.apt:
     pkg: "{{ debian_network_packages }}"
     state: present
@@ -30,15 +31,25 @@
   when: network_dummies_number != 0
   tags: [configuration,network]
 
+- name: Check modprobe is installed
+  ansible.builtin.command: which modprobe
+  register: modprobe_check
+  ignore_errors: yes
+
+- name: Warn the user modprobe is not available
+  ansible.builtin.debug:
+    msg: "modprobe no found in PATH!"
+  when: modprobe_check.rc != 0
+
 - name: Ensure dummy module is unloaded
   modprobe: name="dummy" state=absent
-  when: network_dummies_number == 0 
+  when: network_dummies_number == 0 and modprobe_check.rc == 0
   tags: [configuration,network]
 
 - name: Ensure dummy module is loaded
   modprobe: >
     name="dummy" params="numdummies={{network_dummies_number}}" state=present
-  when: network_dummies_number != 0
+  when: network_dummies_number != 0 and modprobe_check.rc == 0
   tags: [configuration,network]
 
 - include_tasks: Debian.yml
